minor content update on background; fix images on mobile in detailed post

--- a/frontend/src/styles/posts.scss
+++ b/frontend/src/styles/posts.scss
@@ -121,6 +121,16 @@ main {
         line-height: 1.75rem;
     }
 
+    img {
+        max-width: 100%;
+        @media screen and (max-width: 540px) {
+            padding-left: 0;
+            padding-right: 0;
+            padding-bottom: 1rem;
+            float: none;
+        }
+    }
+
     @media screen and (max-width: 960px) {
         max-width: 540px;
     }
